--- a/pages/Blogsp/techtuesday.html
+++ b/pages/Blogsp/techtuesday.html
@@ -5,6 +5,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Tech Tuesdays</title>
+    <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <title>Tech Tuesdays</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:300,400,500">
@@ -15,6 +19,43 @@
     <link rel="stylesheet" href="assets/css/styles-1.css">
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="icon" type="image/png" href="../../image/abc-w.png">
+<style type="text/css">
+  .jp {
+    width: 160px;
+  }
+  .hea {
+    width: 80%;
+  }
+  @media (max-width: 600px){
+    .aw{
+      margin-left: 30px;
+    }
+    .jp{
+    width: 250px;
+    margin-left: 35px;
+  }
+  .hea{
+    width: 100%;
+  }
+  .col-3.news-bg {
+    margin-left: 15px;
+    margin-right: 0px;
+    padding-left: 0px;
+    /* background-color: #f1f2f5; */
+}
+.col-9.news-bg {
+    background-color: #f1f2f5;
+    margin-left: 45px;
+    min-width: 100%;
+    max-width: 105%;
+
+  }
+.newsblock-title {
+  margin-left: 25px;
+}
+}
+
+</style>
 </head>
 <style type="text/css">
   .jp {
