--- a/pages/Blogsp/basics101.html
+++ b/pages/Blogsp/basics101.html
@@ -5,15 +5,15 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Basics 101</title>
-     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+     <link rel="stylesheet" href="Alpha-Buzz-Sept-24th/assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:300,400,500">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway+Dots">
-    <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
-    <link rel="stylesheet" href="assets/css/body.css">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="assets/css/styles-1.css">
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="Alpha-Buzz-Sept-24th/assets/fonts/font-awesome.min.css">
+    <link rel="stylesheet" href="Alpha-Buzz-Sept-24th/assets/css/body.css">
+    <link rel="stylesheet" href="Alpha-Buzz-Sept-24th/assets/css/style.css">
+    <link rel="stylesheet" href="Alpha-Buzz-Sept-24th/assets/css/styles-1.css">
+    <link rel="stylesheet" href="Alpha-Buzz-Sept-24th/assets/css/styles.css">
     <link rel="icon" type="image/png" href="../../image/abc-w.png">
 </head>
 
