--- a/pages/Blogsp/basics101.html
+++ b/pages/Blogsp/basics101.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="icon" type="image/png" href="../../image/abc-w.png">
-    <link rel="stylesheet" href="asset/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="asset/fonts/font-awesome.min.css">
-    <link rel="stylesheet" href="asset/css/style.css">
-    <link rel="stylesheet" href="asset/css/styles-1.css">
-    <link rel="stylesheet" href="asset/css/styles.css">
+    <link rel="stylesheet" href="Alpha-Buzz-Sept-24th/asset/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="Alpha-Buzz-Sept-24th/asset/fonts/font-awesome.min.css">
+    <link rel="stylesheet" href="Alpha-Buzz-Sept-24th/asset/css/style.css">
+    <link rel="stylesheet" href="Alpha-Buzz-Sept-24th/asset/css/styles-1.css">
+    <link rel="stylesheet" href="Alpha-Buzz-Sept-24th/asset/css/styles.css">
 </head>
 
 <body style="background-color: #ffffff;">  <div class="pos-f-t">
