--- a/pages/Blogsp/onestowatch.html
+++ b/pages/Blogsp/onestowatch.html
@@ -9,11 +9,11 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:300,400,500">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway+Dots">
-    <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
-    <link rel="stylesheet" href="assets/css/body.css">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="assets/css/styles-1.css">
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="Alpha-Buzz-Sept-24th/assets/fonts/font-awesome.min.css">
+    <link rel="stylesheet" href="Alpha-Buzz-Sept-24th/assets/css/body.css">
+    <link rel="stylesheet" href="Alpha-Buzz-Sept-24th/assets/css/style.css">
+    <link rel="stylesheet" href="Alpha-Buzz-Sept-24th/assets/css/styles-1.css">
+    <link rel="stylesheet" href="Alpha-Buzz-Sept-24th/assets/css/styles.css">
     <link rel="icon" type="image/png" href="../../image/abc-w.png">
 </head>
 <style type="text/css">
