--- a/pages/Blogsp/basics.html
+++ b/pages/Blogsp/basics.html
@@ -11,9 +11,9 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway+Dots">
     <link rel="stylesheet" href="Alpha-Buzz-Sept-24th/assets/fonts/font-awesome.min.css">
     <link rel="stylesheet" href="Alpha-Buzz-Sept-24th/assets/css/body.css">
-    <link rel="stylesheet" href="Alpha-Buzz-Sept-24th/assets/css/style.css">
-    <link rel="stylesheet" href="Alpha-Buzz-Sept-24th/assets/css/styles-1.css">
-    <link rel="stylesheet" href="Alpha-Buzz-Sept-24th/assets/css/styles.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles-1.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/png" href="../../image/abc-w.png">
 </head>
 <style type="text/css">
