--- a/pages/Blogsp/basics.html
+++ b/pages/Blogsp/basics.html
@@ -5,15 +5,15 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Basics101</title>
-    <link rel="stylesheet" href="Alpha-Buzz-Sept-24th/tree/master/pages/Blogspassets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="asset/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:300,400,500">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway+Dots">
-    <link rel="stylesheet" href="Alpha-Buzz-Sept-24th/tree/master/pages/Blogspassets/fonts/font-awesome.min.css">
-    <link rel="stylesheet" href="Alpha-Buzz-Sept-24th/tree/master/pages/Blogspassets/css/body.css">
-    <link rel="stylesheet" href="Alpha-Buzz-Sept-24th/tree/master/pages/Blogspassets/css/style.css">
-    <link rel="stylesheet" href="Alpha-Buzz-Sept-24th/tree/master/pages/Blogspassets/css/styles-1.css">
-    <link rel="stylesheet" href="Alpha-Buzz-Sept-24th/tree/master/pages/Blogspassets/css/styles.css">
+    <link rel="stylesheet" href="asset/fonts/font-awesome.min.css">
+    <link rel="stylesheet" href="asset/css/body.css">
+    <link rel="stylesheet" href="asset/css/style.css">
+    <link rel="stylesheet" href="asset/css/styles-1.css">
+    <link rel="stylesheet" href="asset/css/styles.css">
     <link rel="icon" type="image/png" href="../../image/abc-w.png">
 </head>
 <style type="text/css">
