--- a/pages/Blogsp/basics.html
+++ b/pages/Blogsp/basics.html
@@ -98,7 +98,7 @@
         </button>
         <span class="buzz">
                 <div >
-                  <img src="asset/img/Abuzz.png" class="Abuz" >
+                  <img src="Asset/img/Abuzz.png" class="Abuz" >
                 </div>
               </span>
         <span class="navbar-text">
@@ -125,7 +125,7 @@
                 <div class="col-md-12 col-lg-9">
                     <h1 class="newsblock-title" style="color: rgb(0,0,0);">Latest Updates</h1>
                     <div class="row">
-                        <div class="col-3 col-lg-4 news-bg"><img src="asset/img/beach.jpg" class="jp" style="border-radius: 30px;padding-top: 10px"></div>
+                        <div class="col-3 col-lg-4 news-bg"><img src="Assets/img/beach.jpg" class="jp" style="border-radius: 30px;padding-top: 10px"></div>
                         <div class="col-9 col-lg-8 news-bg" style="background-color: rgb(255,255,255);">
                             <h1 class="newsblock-title-under" style="font-size: 20px;"><a href="#">Web development for beginners</a></h1>
                             <p>By <a href="#">Vaishnavi Manambat Kaloor</a></p>
@@ -133,7 +133,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-3 col-lg-4 news-bg"><img src="asset/img/beach.jpg" class="jp" style="border-radius: 30px;padding-top: 10px"></div>
+                        <div class="col-3 col-lg-4 news-bg"><img src="Assets/img/beach.jpg" class="jp" style="border-radius: 30px;padding-top: 10px"></div>
                         <div class="col-9 col-lg-8 news-bg" style="background-color: rgb(255,255,255);">
                             <h1 class="newsblock-title-under" style="font-size: 20px;"><a href="#">Web development for beginners</a></h1>
                             <p>By <a href="#">Vaishnavi Manambat Kaloor</a></p>
@@ -141,7 +141,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-3 col-lg-4 news-bg"><img src="asset/img/beach.jpg" class="jp" style="border-radius: 25px;padding-top: 10px"></div>
+                        <div class="col-3 col-lg-4 news-bg"><img src="Assets/img/beach.jpg" class="jp" style="border-radius: 25px;padding-top: 10px"></div>
                         <div class="col-9 col-lg-8 news-bg" style="background-color: rgb(255,255,255);">
                             <h1 class="newsblock-title-under" style="font-size: 20px;"><a href="#">Web development for beginners</a></h1>
                             <p>By <a href="#">Vaishnavi Manambat Kaloor</a></p>
@@ -149,7 +149,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-3 col-lg-4 news-bg"><img src="asset/img/beach.jpg" class="jp" style="border-radius: 30px; padding-top: 10px"></div>
+                        <div class="col-3 col-lg-4 news-bg"><img src="Assets/img/beach.jpg" class="jp" style="border-radius: 30px; padding-top: 10px"></div>
                         <div class="col-9 col-lg-8 news-bg" style="background-color: rgb(255,255,255);">
                             <h1 class="newsblock-title-under" style="font-size: 20px;"><a href="#">Web development for beginners</a></h1>
                             <p>By <a href="#">Vaishnavi Manambat Kaloor</a></p>
@@ -157,7 +157,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-3 col-lg-4 news-bg"><img src="asset/img/beach.jpg" class="jp" style="border-radius: 30px; padding-top: 10px;"></div>
+                        <div class="col-3 col-lg-4 news-bg"><img src="Assets/img/beach.jpg" class="jp" style="border-radius: 30px; padding-top: 10px;"></div>
                         <div class="col-9 col-lg-8 news-bg" style="background-color: rgb(255,255,255);">
                             <h1 class="newsblock-title-under" style="font-size: 20px;"><a href="#">Web development for beginners</a></h1>
                             <p>By <a href="#">Vaishnavi Manambat Kaloor</a></p>
