--- a/pages/Blogsp/techtuesday.html
+++ b/pages/Blogsp/techtuesday.html
@@ -5,15 +5,19 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Tech Tuesdays</title>
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="asset/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:300,400,500">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway+Dots">
-    <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
-    <link rel="stylesheet" href="assets/css/body.css">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="assets/css/styles-1.css">
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="asset/fonts/font-awesome.min.css">
+    <link rel="stylesheet" href="asset/css/body.css">
+    <link rel="stylesheet" href="asset/css/style.css">
+    <link rel="stylesheet" href="asset/css/styles-1.css">
+    <link rel="stylesheet" href="asset/css/styles.css">
     <link rel="icon" type="image/png" href="../../image/abc-w.png">
 </head>
 <style type="text/css">
@@ -94,7 +98,7 @@
         </button>
         <span class="buzz">
                 <div >
-                  <img src="assets/img/Abuzz.png" class="Abuz" >
+                  <img src="Assets/img/Abuzz.png" class="Abuz" >
                 </div>
               </span>
         <span class="navbar-text">
@@ -120,7 +124,7 @@
                 <div class="col-md-12 col-lg-9">
                     <h1 class="newsblock-title" style="color: rgb(0,0,0);">Latest Updates</h1>
                     <div class="row">
-                        <div class="col-3 col-lg-4 news-bg"><img src="assets/img/beach.jpg" class="jp" style="border-radius: 30px;padding-top: 10px"></div>
+                        <div class="col-3 col-lg-4 news-bg"><img src="Assets/img/beach.jpg" class="jp" style="border-radius: 30px;padding-top: 10px"></div>
                         <div class="col-9 col-lg-8 news-bg" style="background-color: rgb(255,255,255);">
                             <h1 class="newsblock-title-under" style="font-size: 20px;"><a href="#">Web development for beginners</a></h1>
                             <p>By <a href="#">Vaishnavi Manambat Kaloor</a></p>
@@ -128,7 +132,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-3 col-lg-4 news-bg"><img src="assets/img/beach.jpg" class="jp" style="border-radius: 30px;padding-top: 10px"></div>
+                        <div class="col-3 col-lg-4 news-bg"><img src="Assets/img/beach.jpg" class="jp" style="border-radius: 30px;padding-top: 10px"></div>
                         <div class="col-9 col-lg-8 news-bg" style="background-color: rgb(255,255,255);">
                             <h1 class="newsblock-title-under" style="font-size: 20px;"><a href="#">Web development for beginners</a></h1>
                             <p>By <a href="#">Vaishnavi Manambat Kaloor</a></p>
@@ -136,7 +140,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-3 col-lg-4 news-bg"><img src="assets/img/beach.jpg" class="jp" style="border-radius: 25px;padding-top: 10px"></div>
+                        <div class="col-3 col-lg-4 news-bg"><img src="Assets/img/beach.jpg" class="jp" style="border-radius: 25px;padding-top: 10px"></div>
                         <div class="col-9 col-lg-8 news-bg" style="background-color: rgb(255,255,255);">
                             <h1 class="newsblock-title-under" style="font-size: 20px;"><a href="#">Web development for beginners</a></h1>
                             <p>By <a href="#">Vaishnavi Manambat Kaloor</a></p>
@@ -144,7 +148,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-3 col-lg-4 news-bg"><img src="assets/img/beach.jpg" class="jp" style="border-radius: 30px; padding-top: 10px"></div>
+                        <div class="col-3 col-lg-4 news-bg"><img src="Assets/img/beach.jpg" class="jp" style="border-radius: 30px; padding-top: 10px"></div>
                         <div class="col-9 col-lg-8 news-bg" style="background-color: rgb(255,255,255);">
                             <h1 class="newsblock-title-under" style="font-size: 20px;"><a href="#">Web development for beginners</a></h1>
                             <p>By <a href="#">Vaishnavi Manambat Kaloor</a></p>
@@ -152,7 +156,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-3 col-lg-4 news-bg"><img src="assets/img/beach.jpg" class="jp" style="border-radius: 30px; padding-top: 10px;"></div>
+                        <div class="col-3 col-lg-4 news-bg"><img src="Assets/img/beach.jpg" class="jp" style="border-radius: 30px; padding-top: 10px;"></div>
                         <div class="col-9 col-lg-8 news-bg" style="background-color: rgb(255,255,255);">
                             <h1 class="newsblock-title-under" style="font-size: 20px;"><a href="#">Web development for beginners</a></h1>
                             <p>By <a href="#">Vaishnavi Manambat Kaloor</a></p>
@@ -163,17 +167,17 @@
                 <div class="col-md-3 aw" style="text-align: center;border-radius: 10px;background-color: #f8c146;">
                     <h1 class="newsblock-title">What's Popular</h1>
                     <div class="card">
-                        <div class="card-body" style="padding: 10px;padding-left: 25px;padding-right: 25px;background-color: #f8c146;"><img src="assets/img/beach.jpg" style="width: 100%;height: 120px;margin-bottom: 5px; border-radius: 30px;">
+                        <div class="card-body" style="padding: 10px;padding-left: 25px;padding-right: 25px;background-color: #f8c146;"><img src="Assets/img/beach.jpg" style="width: 100%;height: 120px;margin-bottom: 5px; border-radius: 30px;">
                             <h4 class="text-left card-title" style="font-size: 20px;/*text-align: left;*/"><a href="#">Web dev for beginners</a></h4>
                             <h6 class="text-left text-muted card-subtitle mb-2" style="color: black;/*text-align: left;*/">By <a href="#">Vaishnavi</a></h6>
                             <h6 class="text-left text-muted card-subtitle mb-2" style="color: black;/*text-align: left;*/">3 minites</h6>
                         </div>
-                        <div class="card-body" style="padding: 10px;padding-left: 25px;padding-right: 25px;background-color: #f8c146;background-color: #f8c146;"><img src="assets/img/beach.jpg" style="width: 100%;height: 120px; border-radius: 30px">
+                        <div class="card-body" style="padding: 10px;padding-left: 25px;padding-right: 25px;background-color: #f8c146;background-color: #f8c146;"><img src="Assets/img/beach.jpg" style="width: 100%;height: 120px; border-radius: 30px">
                             <h4 class="text-left card-title" style="font-size: 20px;/*text-align: left;*/"><a href="#">Is ML the right path for you?</a></h4>
                             <h6 class="text-left text-muted card-subtitle mb-2" style="color: black;/*text-align: left;*/">By <a href="#">Vaishnavi</a></h6>
                             <h6 class="text-left text-muted card-subtitle mb-2" style="color: black;/*text-align: left;*/">3 minites</h6>
                         </div>
-                        <div class="card-body" style="padding: 10px;padding-left: 25px;padding-right: 25px;background-color: #f8c146;background-color: #f8c146;border-color: #f8c146;"><img src="assets/img/beach.jpg" style="width: 100%;height: 120px; border-radius: 30px">
+                        <div class="card-body" style="padding: 10px;padding-left: 25px;padding-right: 25px;background-color: #f8c146;background-color: #f8c146;border-color: #f8c146;"><img src="Assets/img/beach.jpg" style="width: 100%;height: 120px; border-radius: 30px">
                             <h4 class="text-left card-title" style="font-size: 20px;/*text-align: left;*/"><a href="#">Success overnight</a></h4>
                             <h6 class="text-left text-muted card-subtitle mb-2" style="color: black;/*text-align: left;*/">By <a href="#">Vaishnavi</a></h6>
                             <h6 class="text-left text-muted card-subtitle mb-2" style="color: black;/*text-align: left;*/">3 minites</h6>
