--- a/pages/Blogsp/basics.html
+++ b/pages/Blogsp/basics.html
@@ -168,17 +168,17 @@
                 <div class="col-md-3 aw" style="text-align: center;border-radius: 10px;background-color: #f8c146;">
                     <h1 class="newsblock-title">What's Popular</h1>
                     <div class="card">
-                        <div class="card-body" style="padding: 10px;padding-left: 25px;padding-right: 25px;background-color: #f8c146;"><img src="assets/img/beach.jpg" style="width: 100%;height: 120px;margin-bottom: 5px; border-radius: 30px;">
+                        <div class="card-body" style="padding: 10px;padding-left: 25px;padding-right: 25px;background-color: #f8c146;"><img src="Assets/img/beach.jpg" style="width: 100%;height: 120px;margin-bottom: 5px; border-radius: 30px;">
                             <h4 class="text-left card-title" style="font-size: 20px;/*text-align: left;*/"><a href="#">Web dev for beginners</a></h4>
                             <h6 class="text-left text-muted card-subtitle mb-2" style="color: black;/*text-align: left;*/">By <a href="#">Vaishnavi</a></h6>
                             <h6 class="text-left text-muted card-subtitle mb-2" style="color: black;/*text-align: left;*/">3 minites</h6>
                         </div>
-                        <div class="card-body" style="padding: 10px;padding-left: 25px;padding-right: 25px;background-color: #f8c146;background-color: #f8c146;"><img src="assets/img/beach.jpg" style="width: 100%;height: 120px; border-radius: 30px">
+                        <div class="card-body" style="padding: 10px;padding-left: 25px;padding-right: 25px;background-color: #f8c146;background-color: #f8c146;"><img src="Assets/img/beach.jpg" style="width: 100%;height: 120px; border-radius: 30px">
                             <h4 class="text-left card-title" style="font-size: 20px;/*text-align: left;*/"><a href="#">Is ML the right path for you?</a></h4>
                             <h6 class="text-left text-muted card-subtitle mb-2" style="color: black;/*text-align: left;*/">By <a href="#">Vaishnavi</a></h6>
                             <h6 class="text-left text-muted card-subtitle mb-2" style="color: black;/*text-align: left;*/">3 minites</h6>
                         </div>
-                        <div class="card-body" style="padding: 10px;padding-left: 25px;padding-right: 25px;background-color: #f8c146;background-color: #f8c146;border-color: #f8c146;"><img src="assets/img/beach.jpg" style="width: 100%;height: 120px; border-radius: 30px">
+                        <div class="card-body" style="padding: 10px;padding-left: 25px;padding-right: 25px;background-color: #f8c146;background-color: #f8c146;border-color: #f8c146;"><img src="Assets/img/beach.jpg" style="width: 100%;height: 120px; border-radius: 30px">
                             <h4 class="text-left card-title" style="font-size: 20px;/*text-align: left;*/"><a href="#">Success overnight</a></h4>
                             <h6 class="text-left text-muted card-subtitle mb-2" style="color: black;/*text-align: left;*/">By <a href="#">Vaishnavi</a></h6>
                             <h6 class="text-left text-muted card-subtitle mb-2" style="color: black;/*text-align: left;*/">3 minites</h6>
